# book-task-3

./: .gitignore  AGENTS.md  README.md  blog-writing-guide.md
backend-fastapi/labs/A-auth-lab/fastapi/: .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
backend-fastapi/labs/B-federation-security-lab/fastapi/: .env.example  Makefile  README.md  compose.yaml  pyproject.toml
backend-fastapi/labs/E-async-jobs-lab/fastapi/: .env.example  README.md  alembic.ini  compose.yaml  pyproject.toml
backend-fastapi/labs/G-ops-lab/fastapi/: .env.example  README.md  compose.yaml  pyproject.toml
bitthum/: .gitignore  README.md  pyproject.toml
bitthum/00-aws-security-foundations/01-aws-security-primitives/: README.md
bitthum/00-aws-security-foundations/01-aws-security-primitives/docs/: README.md
bitthum/00-aws-security-foundations/02-terraform-aws-lab/notion/: README.md  essay.md
bitthum/00-aws-security-foundations/02-terraform-aws-lab/python/: README.md
bitthum/00-aws-security-foundations/03-cloudtrail-log-basics/: README.md
bitthum/00-aws-security-foundations/03-cloudtrail-log-basics/notion/: README.md
bitthum/00-aws-security-foundations/03-cloudtrail-log-basics/python/: README.md
bitthum/01-cloud-security-core/04-iam-policy-analyzer/: README.md
bitthum/01-cloud-security-core/04-iam-policy-analyzer/docs/: README.md
bitthum/01-cloud-security-core/04-iam-policy-analyzer/notion/: README.md
bitthum/01-cloud-security-core/04-iam-policy-analyzer/problem/: README.md
bitthum/01-cloud-security-core/04-iam-policy-analyzer/python/: README.md
bitthum/01-cloud-security-core/05-cspm-rule-engine/: README.md
bitthum/01-cloud-security-core/05-cspm-rule-engine/docs/: README.md
bitthum/01-cloud-security-core/05-cspm-rule-engine/notion/: essay.md
bitthum/01-cloud-security-core/06-remediation-pack-runner/: README.md
bitthum/01-cloud-security-core/06-remediation-pack-runner/notion/: README.md
bitthum/01-cloud-security-core/06-remediation-pack-runner/problem/: README.md
bitthum/01-cloud-security-core/07-security-lake-mini/docs/: README.md
bitthum/01-cloud-security-core/07-security-lake-mini/notion/: README.md
bitthum/01-cloud-security-core/07-security-lake-mini/python/: README.md
bitthum/01-cloud-security-core/08-container-guardrails/docs/: README.md
bitthum/01-cloud-security-core/08-container-guardrails/notion/: README.md  essay.md
bitthum/01-cloud-security-core/09-exception-and-evidence-manager/problem/: README.md
bitthum/01-cloud-security-core/09-exception-and-evidence-manager/python/: README.md
bitthum/02-capstone/10-cloud-security-control-plane/docs/: demo-walkthrough.md
bitthum/02-capstone/10-cloud-security-control-plane/notion/: README.md
bitthum/02-capstone/10-cloud-security-control-plane/python/: README.md
bitthum/docs/: job-map.md  roadmap.md
bitthum/src/study2_meta/: __init__.py
cs-core/study/Programming-Languages-Foundations/bytecode-ir/: README.md  pyproject.toml
cs-core/study/Programming-Languages-Foundations/parser-interpreter/: README.md  pyproject.toml
cs-core/study/Programming-Languages-Foundations/static-type-checking/: README.md  pyproject.toml
database-systems/python/database-internals/02-wal-recovery/: README.md  pyproject.toml
database-systems/python/database-internals/03-index-filter/: README.md  pyproject.toml
database-systems/python/ddia-distributed-systems/02-leader-follower-replication/: README.md  pyproject.toml
database-systems/python/ddia-distributed-systems/04-clustered-kv-capstone/: README.md  pyproject.toml
security-core/: .gitignore  Makefile  README.md  pyproject.toml
security-core/docs/: README.md  documentation-policy.md  project-catalog.md  readme-contract.md  roadmap.md
security-core/problem-subject-capstone/: 90-capstone-collab-saas-security-review-python.md  90-capstone-collab-saas-security-review-python_answer.md  README.md  README_answer.md
security-core/problem-subject-elective/: 01-crypto-primitives-in-practice-python.md  01-crypto-primitives-in-practice-python_answer.md  README.md  README_answer.md
security-core/problem-subject-essential/: 02-auth-threat-modeling-python.md  02-auth-threat-modeling-python_answer.md  03-owasp-backend-mitigations-python.md  03-owasp-backend-mitigations-python_answer.md  04-dependency-vulnerability-workflow-python.md  04-dependency-vulnerability-workflow-python_answer.md  README.md  README_answer.md
security-core/study/: README.md
security-core/study/01-crypto-primitives-in-practice/: README.md
security-core/study/01-crypto-primitives-in-practice/docs/: README.md
security-core/study/01-crypto-primitives-in-practice/notion/: 00-problem-framing.md  01-approach-log.md  04-knowledge-index.md  05-development-timeline.md
security-core/study/01-crypto-primitives-in-practice/problem/: README.md
security-core/study/01-crypto-primitives-in-practice/python/: README.md
security-core/study/02-auth-threat-modeling/: README.md
security-core/study/02-auth-threat-modeling/docs/: README.md
security-core/study/02-auth-threat-modeling/notion/: 02-debug-log.md  04-knowledge-index.md  README.md
security-core/study/02-auth-threat-modeling/problem/: README.md
security-core/study/02-auth-threat-modeling/python/: README.md
security-core/study/03-owasp-backend-mitigations/: README.md
security-core/study/03-owasp-backend-mitigations/docs/: README.md
security-core/study/03-owasp-backend-mitigations/notion/: 04-knowledge-index.md  05-development-timeline.md  README.md
security-core/study/03-owasp-backend-mitigations/problem/: README.md
security-core/study/03-owasp-backend-mitigations/python/: README.md
security-core/study/04-dependency-vulnerability-workflow/: README.md
security-core/study/04-dependency-vulnerability-workflow/docs/: README.md
security-core/study/04-dependency-vulnerability-workflow/notion/: README.md  (+2 more)
security-core/study/90-capstone-collab-saas-security-review/: README.md
security-core/study/Capstone/: README.md
security-core/study/Foundations-Security/: README.md
security-core/study/blog/: README.md
(+9748 files in other folders)
