[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-core"
version = "0.1.0"
description = "Security foundations study archive with reproducible crypto and backend security labs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "typer>=0.16.1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.17.1",
  "pytest>=8.4.1",
  "ruff>=0.12.10",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true

