[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "parser-interpreter"
version = "0.1.0"
description = "Small expression-oriented language with parser and tree-walk interpreter."
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
