[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "clustered-kv-capstone"
version = "0.1.0"
description = "Python intro capstone for a clustered key-value store."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111,<1",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
