[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workspace-backend-v2-gateway"
version = "0.1.0"
description = "Gateway for workspace-backend-v2-msa."
requires-python = ">=3.12"
dependencies = [
  "argon2-cffi>=23.1,<24.0",
  "email-validator>=2.2,<3.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "PyJWT[crypto]>=2.10,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "redis>=5.2,<6.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.8,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 160
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
